--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       nodejs: 18
-  pre-build:
+  pre_build:
     commands:
       - echo logging into Amazon ECR
       - aws --version
