--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       nodejs: 18
-      java: openjdk8
+       openjdk: 8
   pre_build:
     commands:
       - echo logging into Amazon ECR
