MM-3672 [Service] [Research] Migrate AWS Codebuild to latest version to support nodejs 18 * Researching with corretto 17 for buildspec

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       nodejs: 18
-      java: openjdk17
+      java: corretto17
   pre_build:
     commands:
       - echo logging into Amazon ECR
