--- a/cloudformation/code_pipeline.yml
+++ b/cloudformation/code_pipeline.yml
@@ -34,7 +34,8 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "s3:Get*"
+                  - "s3:GetObjectVersion"
+                  - "s3:GetObject"
                   - "s3:GetBucketLocation"
                   - "s3:PutObject"
                   - "s3:List*"
